# mochaFiTrader

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
src/: main.cpp
src/algo/: AlgoFactory.cpp  AlgoFactory.h  Signal.h  StrategyAggregator.cpp  StrategyAggregator.h  TickType.h
src/algo/algo/: Algo.cpp  Algo.h
src/algo/macd/: MACD.cpp  MACD.h
src/algo/rsi/: RSI.cpp  RSI.h
src/algo/ticktype/: TickType.cpp  TickType.h
src/algo/vmacd/: VMACD.cpp  VMACD.h
src/config/: Config.cpp  Config.h
src/database/: DB_Client.cpp  DB_Client.h
src/log/: Log.cpp  Log.h
src/marketquote/: MarketQuote.h  MarketQuote.hpp
src/model/: TradeableAsset.h
src/orchestrator/: Orchestrator.cpp  Orchestrator.h
src/order/: OrderBuilder.cpp  OrderBuilder.h  OrderType.h
src/streamer/: DX_LinkStreamer.cpp  DX_LinkStreamer.h
src/tastyworks/: TastyWorks.cpp  TastyWorks.h
src/utils/: Utils.cpp  Utils.h
tests/: test_TastyWorks.cpp
tests/integration/: test_AlgoFactoryIntegration.cpp  test_AuthenticationFlow.cpp  test_DB_Integration.cpp  test_LiveStreamIntegrationTest.cpp  test_OrderExecutionIntegration.cpp
tests/test_utils/: MockAlgo.h  MockDX_LinkStreamer.h  MockStreamer.h  MockTastyWorksClient.h  TestUtils.cpp  TestUtils.h
tests/unit/: main.cpp  test_Algo.cpp  test_AlgoFactory.cpp  test_Config.cpp  test_DB_Client.cpp  test_DX_LinkStreamer.cpp  test_Log.cpp  test_LogRotation.cpp  test_MarketQuote.cpp  test_Orchestrator.cpp  test_OrchestratorErrorMock.cpp  test_OrchestratorPositionMock.cpp  test_OrchestratorRiskMock.cpp  test_OrchestratorSellMock.cpp  test_OrderBuilder.cpp  test_OrderType.cpp  test_StrategyAggregator.cpp  test_Strategy_Algo.cpp  test_Strategy_MACD.cpp  test_Strategy_RSI.cpp  test_Strategy_VMACD.cpp  test_SystemIntegrationMock.cpp  test_TastyWorks.cpp  test_TradeableAsset.cpp  test_Utils.cpp  test_WorkflowMock.cpp
